# alass-ffi

./: Cargo.toml  README.md
.github/workflows/: Build.yml  Release.yml  Test.yml  build.yml
ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
ffi-macros/: Cargo.toml
ffi-macros/src/: lib.rs
ffi/examples/sync-demo/: sync-demo.c  sync-demo.sh
ffi/src/: audio_sink.rs  audiosink.rs  lib.rs  logging.rs  options.rs  result_codes.rs  timespans.rs  util.rs  voice_activity.rs
util/: Cargo.toml  README.md
util/src/: audiosink.rs  lib.rs  morph.rs  options.rs  timespans.rs  util.rs  voice_activity.rs
util/src/vad/: mod.rs  silero_onnxruntime.rs  silero_tract.rs  webrtc.rs
util/src/voice/: mod.rs  silero_vad.rs  webrtc_vad.rs
