[package]
name = "alass-ffi-macros"
version = "0.1.0"
description = "Procedural macros for alass-ffi crate"
authors = ["Weston Siegenthaler <westons+github@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Wsiegenthaler/alass-ffi.git"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.89", features = ["full"] }
quote = "1.0.2"

[dev-dependencies]
log = "0.4.8"
