[package]
name = "alass-ffi"
version = "0.3.0"
description = "FFI bindings for subtitle synchronization with alass"
authors = ["Weston Siegenthaler <westons@gmail.com>"]
homepage = "https://github.com/wsiegenthaler/alass-ffi/tree/master/ffi"
repository = "https://github.com/wsiegenthaler/alass-ffi"
license = "GPL-3.0"
edition = "2021"
readme = "README.md"
keywords = ["subtitle", "align", "automatic", "ffi"]

[lib]
name = "alass"
crate-type = ["staticlib", "cdylib"]
doc = false

[dependencies]
alass-ffi-macros = { path = "../ffi-macros", version = "0.3.0" }
alass-util = { path = "../util", version = "0.3.0" }
alass-core = "2.0.0"
subparse = "0.7.0"
log = "0.4.8"
fern = "0.6.0"
chrono = "0.4.10"

[build-dependencies]
cbindgen = "^0.20"
