[package]
name = "alass-util"
version = "0.2.0"
description = "A Rust convenience API for subtitle synchronization with alass-core"
authors = ["Weston Siegenthaler <westons@gmail.com>"]
homepage = "https://github.com/wsiegenthaler/alass-ffi/tree/master/util"
repository = "https://github.com/wsiegenthaler/alass-ffi"
documentation = "https://docs.rs/alass-util"
license = "GPL-3.0"
edition = "2021"
readme = "README.md"
keywords = ["subtitle", "align", "automatic", "wrapper"]

[features]
#default = ["voice-webrtc"]
#default = ["voice-silero"]
#default = ["voice-webrtc", "debug-sample-data", "debug-voice-activity-data"]
default = ["voice-silero", "debug-sample-data", "debug-voice-activity-data"]

# voice activity detector
voice-webrtc = ["webrtc-vad"] # https://github.com/kaegi/webrtc-vad
voice-silero = ["tract-onnx"] # https://github.com/snakers4/silero-vad

# debug
debug-sample-data = [] # dumps raw sample data to disk for inspection
debug-voice-activity-data = [] # dumps voice activity data to disk for inspection

[dependencies]
alass-core = "2.0.0"
subparse = "0.7.0"
encoding_rs = "0.8.22"
chardet = "0.2"
byteorder = "1.3.4"
log = "0.4.8"
webrtc-vad = { version = "0.4.0", optional = true }
tract-onnx = { version = "0.16.1", optional = true }

tract-core = "0.16.1" #TODO need?
