[package]
name = "alass-util"
version = "0.3.0"
description = "A Rust convenience API for subtitle synchronization with alass-core"
authors = ["Weston Siegenthaler <westons@gmail.com>"]
homepage = "https://github.com/wsiegenthaler/alass-ffi/tree/master/util"
repository = "https://github.com/wsiegenthaler/alass-ffi"
documentation = "https://docs.rs/alass-util"
license = "GPL-3.0"
edition = "2021"
readme = "README.md"
keywords = ["subtitle", "align", "automatic", "wrapper"]

[features]

# Select voice activity detector using any one of 'vad-webrtc', 'vad-silero-tract', 'vad-silero-onnxruntime' features
default = ["vad-webrtc"]

# voice activity detector
vad-webrtc = ["webrtc-vad"] # https://github.com/kaegi/webrtc-vad
vad-silero-tract = ["tract-onnx"] # https://github.com/snakers4/silero-vad
vad-silero-onnxruntime = ["onnxruntime"] # https://github.com/snakers4/silero-vad

# debug
debug-sample-data = [] # dumps raw sample data to disk for inspection
debug-voice-activity-data = [] # dumps voice activity data to disk for inspection

[dependencies]
alass-core = "2.0.0"
subparse = "0.7.0"
encoding_rs = "0.8.22"
chardet = "0.2"
byteorder = "1.3.4"
log = "0.4.8"
webrtc-vad = { version = "0.4.0", optional = true }
tract-onnx = { version = "0.16.1", optional = true }
onnxruntime = { git = "https://github.com/wsiegenthaler/onnxruntime-rs.git", branch = "owned_environment", optional = true }
